--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,14 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
+    "import:fakestore": "node scripts/importFakestore.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.12.1",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
