--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,8 +10,7 @@ env:
 phases:
   install:
     runtime-versions:
-    nodejs: 20
-
+      nodejs: 20
     commands:
       - echo "Installing backend dependencies..."
       - cd backend && npm ci && cd ..
@@ -38,10 +37,6 @@ phases:
       - aws cloudfront create-invalidation --distribution-id E27VTXLPQICWAN --paths "/*"
       - echo "Deploying backend to Elastic Beanstalk..."
       - aws s3 cp backend.zip s3://$ARTIFACT_BUCKET/backend.zip
-      - aws elasticbeanstalk create-application-version --application-name $BACKEND_EB_APP --version-label $(date +%Y%m%d%H%M%S) --source-bundle S3Bucket=$ARTIFACT_BUCKET,S3Key=backend.zip
-      - aws elasticbeanstalk update-environment --environment-name $BACKEND_EB_ENV --version-label $(date +%Y%m%d%H%M%S)
-
-artifacts:
-  files:
-    - backend.zip
-  discard-paths: yes
+      - TIMESTAMP=$(date +%Y%m%d%H%M%S)
+      - aws elasticbeanstalk create-application-version --application-name $BACKEND_EB_APP --version-label $TIMESTAMP --source-bundle S3Bucket=$ARTIFACT_BUCKET,S3Key=backend.zip
+      - aws elasticbeanstalk update-environment --environment-name $BACKEND_EB_ENV --version-label $TIMESTAMP
