--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,42 +1,39 @@
 version: 0.2
 
-env:
-  variables:
-    FRONTEND_BUCKET: "aws-cloud-native-ecommerce-frontend"
-    BACKEND_EB_APP: "aws-cloud-native-ecommerce"
-    BACKEND_EB_ENV: "ecommerce-env"
-    ARTIFACT_BUCKET: "aws-cloud-native-ecommerce-artifacts"
-
 phases:
   install:
     runtime-versions:
-      nodejs: 20
-    commands:
-      - echo "Installing backend dependencies..."
-      - cd backend && npm ci && cd ..
-      - echo "Installing frontend dependencies..."
-      - cd frontend && npm ci && cd ..
-
+      nodejs: 18
   pre_build:
     commands:
-      - echo "Pre-build phase..."
-
+      - echo "Installing frontend dependencies..."
+      - cd frontend
+      - npm install
+      - cd ..
+      - echo "Installing backend dependencies..."
+      - cd backend
+      - npm install
+      - cd ..
   build:
     commands:
-      - echo "Building backend..."
-      - cd backend && zip -r ../backend.zip . && cd ..
       - echo "Building frontend..."
-      - cd frontend && npm run build && cd ..
-      - echo "Frontend build complete."
-
+      - cd frontend
+      - npm run build
+      - cd ..
+      - echo "Preparing backend bundle..."
+      - cd backend
+      # (optional) run tests here
+      - zip -r ../backend.zip .
+      - cd ..
   post_build:
     commands:
-      - echo "Deploying frontend to S3..."
-      - aws s3 sync frontend/build/ s3://$FRONTEND_BUCKET --delete
-      - echo "Invalidating CloudFront cache..."
-      - aws cloudfront create-invalidation --distribution-id E27VTXLPQICWAN --paths "/*"
-      - echo "Deploying backend to Elastic Beanstalk..."
-      - aws s3 cp backend.zip s3://$ARTIFACT_BUCKET/backend.zip
-      - TIMESTAMP=$(date +%Y%m%d%H%M%S)
-      - aws elasticbeanstalk create-application-version --application-name $BACKEND_EB_APP --version-label $TIMESTAMP --source-bundle S3Bucket=$ARTIFACT_BUCKET,S3Key=backend.zip
-      - aws elasticbeanstalk update-environment --environment-name $BACKEND_EB_ENV --version-label $TIMESTAMP
+      - echo "Frontend and backend build completed."
+
+artifacts:
+  files: 
+    - frontend/**/*
+  name: frontend.zip
+  secondary-artifacts:
+    BackendArtifact:
+      files:
+        - backend.zip
