--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -21,5 +21,5 @@ jobs:
 
     - name: Deploy to S3
       run: |
-        aws s3 sync build/ s3://your-s3-bucket-name/ --delete
-        aws cloudfront create-invalidation --distribution-id YOUR_CLOUDFRONT_ID --paths "/*"
+        aws s3 sync build/ s3://aws-cloud-native-ecommerce-frontend/ --delete
+        aws cloudfront create-invalidation --distribution-id E27VTXLPQICWAN --paths "/*"
