--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,24 +2,51 @@ name: CD
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main  # deploys on push to main branch
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      # 1. Checkout code
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v2
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
+      # 2. Set up Node.js
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
 
-    - name: Deploy to S3
-      run: |
-        aws s3 sync build/ s3://aws-cloud-native-ecommerce-frontend/ --delete
-        aws cloudfront create-invalidation --distribution-id E27VTXLPQICWAN --paths "/*"
+      # 3. Install dependencies
+      - name: Install dependencies
+        run: npm ci
+
+      # 4. Build React app
+      - name: Build
+        run: npm run build
+
+      # 5. Configure AWS credentials
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      # 6. Deploy to S3
+      - name: Deploy to S3
+        run: |
+          aws s3 sync build/ s3://aws-cloud-native-ecommerce-frontend --delete
+          echo "Deployed to S3 successfully!"
+
+      # 7. Invalidate CloudFront cache (optional)
+      - name: Invalidate CloudFront cache
+        if: success()
+        run: |
+          aws cloudfront create-invalidation \
+            --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} \
+            --paths "/*"
+          echo "CloudFront cache invalidated"
