--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,86 +1,72 @@
 
-name: CD
+name: CI/CD Pipeline
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
+    env:
+      AWS_REGION: us-east-1
 
     steps:
-      # 1. Checkout repository
-      - name: Checkout repository
+      # 1️ Checkout repo
+      - name: Checkout code
         uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
 
-      # 2. Setup Node.js
+      # 2️ Setup Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 20  # Keep consistent with CI
+          node-version: 18
 
-      # 3. Verify frontend folder and lockfile
-      - name: Verify frontend folder & lockfile
+      # 3️ Install backend dependencies if exists
+      - name: Build Backend
+        if: ${{ always() }}
         run: |
-          if [ ! -d "./frontend" ]; then
-            echo "Error: frontend folder does not exist!"
-            exit 1
+          if [ -f backend/package-lock.json ]; then
+            echo "Building backend..."
+            cd backend
+            npm ci
+            npm run build || echo "No build script found"
+            cd ..
+          else
+            echo "No backend package-lock.json, skipping backend"
           fi
-          if [ ! -f "./frontend/package-lock.json" ]; then
-            echo "Error: frontend/package-lock.json missing!"
-            exit 1
-          fi
 
-      # 4. Install frontend dependencies
-      - name: Install frontend dependencies
-        working-directory: ./frontend
-        run: npm ci
-
-      # 5. Build frontend
-      - name: Build frontend
-        working-directory: ./frontend
-        run: npm run build
-
-      # 6. Verify backend folder and lockfile (optional)
-      - name: Verify backend folder & lockfile
+      # 4️Install frontend dependencies
+      - name: Build Frontend
         run: |
-          if [ ! -d "./backend" ]; then
-            echo "Warning: backend folder does not exist, skipping backend steps."
-          elif [ ! -f "./backend/package-lock.json" ]; then
-            echo "Error: backend/package-lock.json missing!"
-            exit 1
-          fi
+          cd frontend
+          npm ci
+          npm run build
+          cd ..
 
-      # 7. Install backend dependencies (optional)
-      - name: Install backend dependencies
-        if: ${{ exists('backend/package-lock.json') }}
-        working-directory: ./backend
-        run: npm ci
-
-      # 8. Configure AWS credentials
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
+      # 5️ Deploy backend to Elastic Beanstalk
+      - name: Deploy Backend to Elastic Beanstalk
+        if: ${{ secrets.EB_APP_NAME && secrets.EB_ENV_NAME && secrets.AWS_ACCESS_KEY_ID && secrets.AWS_SECRET_ACCESS_KEY }}
+        uses: einaregilsson/beanstalk-deploy@v21
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          application_name: ${{ secrets.EB_APP_NAME }}
+          environment_name: ${{ secrets.EB_ENV_NAME }}
+          region: ${{ env.AWS_REGION }}
+          version_label: ${{ github.sha }}
+          bucket_name: ${{ secrets.EB_BUCKET }}
+          bucket_key: backend-${{ github.sha }}.zip
+          zip_file: backend.zip
 
-      # 9. Deploy frontend to S3
-      - name: Deploy frontend to S3
+      # 6️ Deploy frontend to S3 + invalidate CloudFront
+      - name: Deploy Frontend to S3
+        if: ${{ secrets.S3_BUCKET && secrets.CLOUDFRONT_DISTRIBUTION_ID }}
         run: |
-          echo "Deploying frontend to S3..."
-          aws s3 sync frontend/build/ s3://aws-cloud-native-ecommerce-frontend --delete
-          echo "Frontend deployed successfully!"
-
-      # 10. Optional: Invalidate CloudFront cache
-      - name: Invalidate CloudFront cache
-        if: success() && ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID != '' }}
-        run: |
-          echo "Invalidating CloudFront cache..."
+          aws s3 sync frontend/build s3://${{ secrets.S3_BUCKET }} --delete
           aws cloudfront create-invalidation \
             --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} \
             --paths "/*"
-          echo "CloudFront cache invalidated."
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ env.AWS_REGION }}
