--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,13 +1,12 @@
-name: CI
+name: CD
 
 on:
   push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -15,45 +14,47 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2. Set up Node.js
-      - name: Set up Node.js
+      # 2. Setup Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 20
 
-      # 3. Install frontend dependencies
+      # 3. Install frontend dependencies safely
       - name: Install frontend dependencies
         working-directory: ./frontend
-        run: npm ci
+        run: |
+          if [ -f "package-lock.json" ]; then
+            npm ci
+          else
+            echo "Error: frontend/package-lock.json missing!"
+            exit 1
+          fi
 
-      # 4. Run frontend tests
-      - name: Run frontend tests
-        working-directory: ./frontend
-        run: npm test -- --watchAll=false
-
-      # 5. Build frontend
+      # 4. Build frontend
       - name: Build frontend
         working-directory: ./frontend
         run: npm run build
 
-      # 6. Optional: Install backend dependencies if backend exists
-      - name: Install backend dependencies
-        run: |
-          if [ -f "./backend/package-lock.json" ]; then
-            echo "Installing backend dependencies..."
-            cd backend
-            npm ci
-          else
-            echo "No backend detected. Skipping backend installation."
-          fi
+      # 5. Configure AWS credentials
+      - name: Configure AWS credentials
+        if: ${{ secrets.AWS_ACCESS_KEY_ID != '' && secrets.AWS_SECRET_ACCESS_KEY != '' && secrets.AWS_REGION != '' }}
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
-      # 7. Optional: Run backend tests if backend exists
-      - name: Run backend tests
+      # 6. Deploy frontend to S3
+      - name: Deploy frontend to S3
+        if: ${{ secrets.S3_BUCKET != '' }}
         run: |
-          if [ -f "./backend/package-lock.json" ]; then
-            echo "Running backend tests..."
-            cd backend
-            npm test
-          else
-            echo "No backend detected. Skipping backend tests."
-          fi
+          aws s3 sync frontend/build/ s3://${{ secrets.S3_BUCKET }} --delete
+
+      # 7. Optional: Invalidate CloudFront cache
+      - name: Invalidate CloudFront cache
+        if: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID != '' }}
+        run: |
+          aws cloudfront create-invalidation \
+            --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} \
+            --paths "/*"
