--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           node-version: 20
 
-      # 3. Install frontend dependencies safely
+      # 3. Install frontend dependencies
       - name: Install frontend dependencies
         working-directory: ./frontend
         run: |
@@ -33,17 +33,7 @@ jobs:
             exit 1
           fi
 
-      # 4. Run frontend tests
-      - name: Run frontend tests
-        working-directory: ./frontend
-        run: |
-          if [ -f "package-lock.json" ]; then
-            npm test -- --watchAll=false
-          else
-            echo "Skipping frontend tests: package-lock.json missing"
-          fi
-
-      # 5. Build frontend
+      # 4. Build frontend
       - name: Build frontend
         working-directory: ./frontend
         run: |
@@ -53,7 +43,7 @@ jobs:
             echo "Skipping frontend build: package-lock.json missing"
           fi
 
-      # 6. Optional: Install backend dependencies safely
+      # 5. Optional: Install backend dependencies
       - name: Install backend dependencies
         working-directory: ./backend
         run: |
@@ -62,15 +52,4 @@ jobs:
             npm ci
           else
             echo "No backend detected. Skipping backend installation."
-          fi
-
-      # 7. Optional: Run backend tests safely
-      - name: Run backend tests
-        working-directory: ./backend
-        run: |
-          if [ -f "package-lock.json" ]; then
-            echo "Running backend tests..."
-            npm test
-          else
-            echo "No backend detected. Skipping backend tests."
           fi
