--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,13 +23,7 @@ jobs:
       # 3. Install frontend dependencies
       - name: Install frontend dependencies
         working-directory: ./frontend
-        run: |
-          if [ -f "package-lock.json" ]; then
-            npm ci
-          else
-            echo "Error: frontend/package-lock.json missing!"
-            exit 1
-          fi
+        run: npm ci
 
       # 4. Build frontend
       - name: Build frontend
@@ -38,18 +32,15 @@ jobs:
 
       # 5. Configure AWS credentials
       - name: Configure AWS credentials
-        if: ${{ secrets.AWS_ACCESS_KEY_ID != '' && secrets.AWS_SECRET_ACCESS_KEY != '' && secrets.AWS_REGION != '' }}
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      # 6. Deploy frontend to S3
+      # 6. Deploy to S3
       - name: Deploy frontend to S3
-        if: ${{ secrets.S3_BUCKET != '' }}
-        run: |
-          aws s3 sync frontend/build/ s3://${{ secrets.S3_BUCKET }} --delete
+        run: aws s3 sync frontend/build/ s3://${{ secrets.S3_BUCKET }} --delete
 
       # 7. Optional: Invalidate CloudFront cache
       - name: Invalidate CloudFront cache
