Fix workflows: remove npm ci, use npm install

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,7 +23,7 @@ jobs:
       # 3. Install frontend dependencies
       - name: Install frontend dependencies
         working-directory: ./frontend
-        run: npm ci
+        run: npm install --legacy-peer-deps
 
       # 4. Build frontend
       - name: Build frontend
@@ -32,17 +32,20 @@ jobs:
 
       # 5. Configure AWS credentials
       - name: Configure AWS credentials
+        if: ${{ secrets.AWS_ACCESS_KEY_ID != '' && secrets.AWS_SECRET_ACCESS_KEY != '' && secrets.AWS_REGION != '' }}
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      # 6. Deploy to S3
+      # 6. Deploy frontend to S3
       - name: Deploy frontend to S3
-        run: aws s3 sync frontend/build/ s3://${{ secrets.S3_BUCKET }} --delete
+        if: ${{ secrets.S3_BUCKET != '' }}
+        run: |
+          aws s3 sync frontend/build/ s3://${{ secrets.S3_BUCKET }} --delete
 
-      # 7. Optional: Invalidate CloudFront cache
+      # 7. Invalidate CloudFront cache
       - name: Invalidate CloudFront cache
         if: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID != '' }}
         run: |
