--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -30,25 +30,34 @@ jobs:
         working-directory: ./frontend
         run: npm run build
 
-      # 5. Configure AWS credentials (only if all required secrets exist)
+      # 5. Configure AWS credentials
       - name: Configure AWS credentials
-        if: ${{ secrets.AWS_ACCESS_KEY_ID && secrets.AWS_SECRET_ACCESS_KEY && secrets.AWS_REGION }}
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      # 6. Deploy frontend to S3 (only if S3_BUCKET secret exists)
+      # 6. Deploy frontend to S3
       - name: Deploy frontend to S3
-        if: ${{ secrets.S3_BUCKET }}
         run: |
-          aws s3 sync frontend/build/ s3://${{ secrets.S3_BUCKET }} --delete
+          if [ -n "${S3_BUCKET}" ]; then
+            aws s3 sync frontend/build/ s3://$S3_BUCKET --delete
+          else
+            echo "S3_BUCKET not defined, skipping deployment."
+          fi
+        env:
+          S3_BUCKET: ${{ secrets.S3_BUCKET }}
 
-      # 7. Invalidate CloudFront cache (only if CLOUDFRONT_DISTRIBUTION_ID secret exists)
+      # 7. Invalidate CloudFront cache
       - name: Invalidate CloudFront cache
-        if: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
         run: |
-          aws cloudfront create-invalidation \
-            --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} \
-            --paths "/*"
+          if [ -n "${CLOUDFRONT_DIST}" ]; then
+            aws cloudfront create-invalidation \
+              --distribution-id $CLOUDFRONT_DIST \
+              --paths "/*"
+          else
+            echo "CLOUDFRONT_DIST not defined, skipping invalidation."
+          fi
+        env:
+          CLOUDFRONT_DIST: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
