--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -46,6 +46,8 @@ jobs:
       - name: Build frontend
         working-directory: ./frontend
         run: npm run build
+        env: 
+          REACT_APP_BACKEND_URL: ${{ secrets.REACT_APP_BACKEND_URL }}
 
       # 6. Configure AWS credentials
       - name: Configure AWS credentials
