--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.12.1",
+    "aws-sdk": "^2.1692.0",
+    "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "jwk-to-pem": "^2.0.7",
     "path": "^0.12.7",
     "pg": "^8.16.3",
     "sequelize": "^6.37.7",
