Updated ci.yml and cd.yml for github workflow

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,61 +10,67 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      # Fail fast if required secrets are missing
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: ${{ secrets.AWS_REGION }}
       S3_BUCKET: ${{ secrets.S3_BUCKET }}
       CLOUDFRONT_DIST: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
+      EB_APP_NAME: aws-cloud-native-ecommerce
+      EB_ENV_NAME: ecommerce-env
 
     steps:
       # 1. Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2. Validate secrets
-      - name: Validate required secrets
-        run: |
-          : "${AWS_ACCESS_KEY_ID:?Missing AWS_ACCESS_KEY_ID}"
-          : "${AWS_SECRET_ACCESS_KEY:?Missing AWS_SECRET_ACCESS_KEY}"
-          : "${AWS_REGION:?Missing AWS_REGION}"
-          : "${S3_BUCKET:?Missing S3_BUCKET}"
-          : "${CLOUDFRONT_DIST:?Missing CLOUDFRONT_DISTRIBUTION_ID}"
-
-      # 3. Setup Node.js
+      # 2. Setup Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 20
 
-      # 4. Install frontend dependencies
+      # ------------------------------
+      # FRONTEND DEPLOYMENT
+      # ------------------------------
       - name: Install frontend dependencies
         working-directory: ./frontend
         run: npm install --legacy-peer-deps
 
-      # 5. Build frontend
       - name: Build frontend
         working-directory: ./frontend
         run: npm run build
-        env: 
+        env:
           REACT_APP_BACKEND_URL: ${{ secrets.REACT_APP_BACKEND_URL }}
           REACT_APP_STRIPE_PUBLISHABLE_KEY: ${{ secrets.REACT_APP_STRIPE_PUBLISHABLE_KEY }}
 
-      # 6. Configure AWS credentials
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
-
-      # 7. Deploy frontend to S3
       - name: Deploy frontend to S3
         run: aws s3 sync frontend/build/ s3://$S3_BUCKET --delete
 
-      # 8. Invalidate CloudFront cache
       - name: Invalidate CloudFront cache
+        run: aws cloudfront create-invalidation --distribution-id $CLOUDFRONT_DIST --paths "/*"
+
+      # ------------------------------
+      # BACKEND DEPLOYMENT
+      # ------------------------------
+      - name: Install backend dependencies
+        working-directory: ./backend
+        run: npm install --legacy-peer-deps
+
+      - name: Package backend for EB
         run: |
-          aws cloudfront create-invalidation \
-            --distribution-id $CLOUDFRONT_DIST \
-            --paths "/*"
+          cd backend
+          zip -r ../backend-deploy.zip .
+
+      - name: Upload backend bundle to S3
+        run: aws s3 cp backend-deploy.zip s3://$S3_BUCKET/backend-deploy-${{ github.sha }}.zip
+
+      - name: Deploy backend to Elastic Beanstalk
+        run: |
+          aws elasticbeanstalk create-application-version \
+            --application-name $EB_APP_NAME \
+            --version-label "build-${{ github.sha }}" \
+            --source-bundle S3Bucket=$S3_BUCKET,S3Key=backend-deploy-${{ github.sha }}.zip
+
+          aws elasticbeanstalk update-environment \
+            --environment-name $EB_ENV_NAME \
+            --version-label "build-${{ github.sha }}"
