--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,22 +21,46 @@ jobs:
         with:
           node-version: 20
 
-      # 3. Install frontend dependencies
+      # ------------------------------
+      # FRONTEND CHECKS
+      # ------------------------------
       - name: Install frontend dependencies
         working-directory: ./frontend
         run: npm install --legacy-peer-deps
 
-      # 4. Build frontend
       - name: Build frontend
         working-directory: ./frontend
         run: npm run build
 
-      # 5. Optional: Install backend dependencies
+      - name: Run frontend tests
+        working-directory: ./frontend
+        run: npm test -- --watchAll=false || echo "No frontend tests"
+
+      # ------------------------------
+      # BACKEND CHECKS
+      # ------------------------------
       - name: Install backend dependencies
         working-directory: ./backend
-        run: npm install --legacy-peer-deps || echo "No backend detected"
+        run: npm install --legacy-peer-deps
 
-      # 6. Optional: Build backend
+      # Check if server compiles/starts without crashing
+      - name: Lint backend
+        working-directory: ./backend
+        run: npm run lint || echo "No lint script"
+
       - name: Build backend
         working-directory: ./backend
         run: npm run build || echo "No backend build script"
+
+      # Optional: run backend tests
+      - name: Run backend tests
+        working-directory: ./backend
+        run: npm test -- --watchAll=false || echo "No backend tests"
+
+      # Ensure backend starts successfully
+      - name: Verify backend starts
+        working-directory: ./backend
+        run: |
+          node server.js &
+          sleep 5
+          curl -f http://localhost:3000/api/products || (echo "Backend did not start correctly" && exit 1)
